k8s/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  name: cartloop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cartloop
  template:
    metadata:
      labels:
        app: cartloop
    spec:
      containers:
        - name: cartloop
          image: ayobuba/cartloop:latest
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - /health.sh
            initialDelaySeconds: 60
            periodSeconds: 100
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "128Mi"
          ports:
            - containerPort: 8000
              name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartloop
spec:
  podSelector:
    matchLabels:
      app: cartloop
  policyTypes:
  - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cartloop
  labels:
    app: cartloop
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
  selector:
    app: cartloop
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: cartloop
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: cartloop.info
#      http:
#        paths:
#          - backend:
#              service:
#                name: cartloop
#                port:
#                  number: 8000
#            pathType: Prefix
#            path: /
